--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <title>Ignite Timer</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+
+       <!-- Global site tag (gtag.js) - Google Analytics -->
+       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-175343555-2"></script>
+       <script>
+         window.dataLayer = window.dataLayer || [];
+         function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
+   
+         gtag('config', 'UA-175343555-2');
+       </script>
   </head>
   <body>
     <div id="root"></div>
